[gd_scene load_steps=3 format=3 uid="uid://cj4r3cj0k242i"]

[ext_resource type="Theme" uid="uid://mxuh4rggdod8" path="res://Scripts/Resources/default_theme.tres" id="1_1rerr"]
[ext_resource type="Script" uid="uid://b6ugdymjhmev7" path="res://Scripts/menu.gd" id="1_xhh6f"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_xhh6f")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="ColorRect" parent="."]
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
size_flags_horizontal = 4
size_flags_vertical = 0
color = Color(0.819608, 0.796078, 0.627451, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = -220.0
offset_top = -228.0
offset_right = 228.0
offset_bottom = -126.438
size_flags_horizontal = 4
theme = ExtResource("1_1rerr")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 13
theme_override_font_sizes/font_size = 100
text = "Flappy Thing"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
process_mode = 3
offset_left = -80.0
offset_top = -12.0
offset_right = 80.0
offset_bottom = 195.0
theme = ExtResource("1_1rerr")

[node name="Play" type="Button" parent="Buttons"]
process_mode = 3
layout_mode = 2
text = "Play"

[node name="Customize" type="Button" parent="Buttons"]
layout_mode = 2
text = "Customize
"

[node name="Settings" type="Button" parent="Buttons"]
process_mode = 3
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="Buttons"]
process_mode = 3
layout_mode = 2
text = "Quit"

[connection signal="mouse_entered" from="Buttons/Play" to="." method="_on_button_entered"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Buttons/Customize" to="." method="_on_button_entered"]
[connection signal="pressed" from="Buttons/Customize" to="." method="_on_customize_pressed"]
[connection signal="mouse_entered" from="Buttons/Settings" to="." method="_on_button_entered"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="Buttons/Quit" to="." method="_on_button_entered"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
